Update styles.css - Fix dark mode.

--- a/chrome-extension/styles.css
+++ b/chrome-extension/styles.css
@@ -285,8 +285,17 @@ body.dark-mode .worklog-items-table {
   border: 1px solid #444;
 }
 
-body.dark-mode .worklog-items-table td,
 body.dark-mode .worklog-items-table th {
+  border-color: #444;
+  background-color: #2a2a2a;
+  color: #f0f0f0;
+}
+
+body.dark-mode .worklog-items-table td {
+  border: 1px solid #444;
+}
+
+body.dark-mode .worklog-items-table tr:not(.worklog--edited):not(.worklog--invalid):not(.worklog--deleted):not(.worklog--saved) td {
   border-color: #444;
   background-color: #2a2a2a;
   color: #f0f0f0;
